# pscal

./: .build.app.swp  .exsh-jobspec-40097-jobs1  .exsh-jobspec-40097-jobs2  .exshrc  .gitignore  .gitmodules  200.  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  PSCAL-Obj  README.md  RELEASE_NOTES_V.1R29.md  RELEASE_NOTES_V.1R29_DRAFT.md  RELEASE_NOTES_v2.1-beta.md  RELEASE_NOTES_v2.2.md  RELEASE_NOTES_v2.21.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.3.1.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v4.0.0.md  TODO  a.out  apk.txt  benchmark.pl  build.app  check6  check6a  cmake_install.cmake  foo.pbc  install.sh  install_manifest.txt  rea-method-dispatch-runtime.md  rea-obj  (+12 more)
.Jules/: palette.md
.claude/: settings.json
.github/: pull_request_template.md
.jules/: bolt.md  palette.md  sentinel.md
.tmp_tests/: loop.pas  loop.rea
Docs/: Architecture  CLike_overview.md  Makefile  NextVi.md  Pascal_overview.md  Pscal_Builtins.md  Pscal_Builtins.rtf  Pscal_VM_Builtins.md  Pscal_VM_Overview.md  README.md  aether_architecture_and_rationale.md  aether_benchmark_analysis_note.md  aether_benchmark_gaps.md  aether_doc_maintenance.md  aether_failure_analysis.md  aether_for_llms_and_others.md  aether_for_llms_with_small_contexts.md  aether_specialization_pipeline.md  aether_training_operations.md  aether_training_recipe_v7.md  bench_runbook.md  clike_language_reference.md  clike_overview.md  clike_repl_tutorial.md  clike_tiny_compiler.md  clike_tutorial.md  dynamic_builtin_example.md  exsh_bash_builtin_coverage.txt  exsh_debug_log.md  exsh_overview.md  extended_builtins.md  extending_builtins.md  go_style_closure_interface_demo.md  http_security.md  ios_build.md  ios_micro_nextvi_integration_contract.md  ios_ssh_debug_race_retest.md  ios_vproc_kernel_control_plane.md  ios_vproc_plan.md  ios_vproc_proc_emulation.md  (+31 more)
Examples/: AreaCalculation.p  CMakeLists.txt  ColorPalette256  DosExample.p  Hangman5  LinkedList  Makefile  Mando16Color  Mando256Color  MandoMono  MiscDemo  SDLBreakout  SDLInteractiveMandelbrot  SDLMultiBouncingBalls  SDLSimplePong  SDLSoundSimplePong  area.p  blackjack  crtd  factorial_recurse  gtn  hangman  hangman2  hangman3  hangman4  hangman5  mandoSDL  mandoSDL_Linux  plasma  plasmaSDL256  plasmaSDL_RGB  quad  rand_check  serp  snake3  weather  weather.p
Misc/: .tall.swp  Benchmarks  CRT.pl  MakePongSounds.c  bounce.c  breakout_sounds.c  dscal  hm3  hm4  hscal  ncrtd  ppscal  pscall  s.p  snake  snake2  snake3  snake_debug  ssize  t.p  tac  tall  taw  tb  tbi  tcs  testing.p  tid.p  tkp  tt.p  tw  typescript  w  w2  wall_hit_lf.c  y
Notes/: cache_progress.md  smallclu.md  smallclue.md
Tests/: ApiSendReceiveTest.p  ArgumentOrderMismatch.p  ArrayArgumentMismatch.p  BitWiseSuite  BoolTest1.p  BoolTest2.p  BoolTest3.p  BoolTest4.p  CompileTimeBounds.p  FileIOEdgeTests.p  GetPidExtensionTest.p  GlobalEnumTest.p  Hello  InlineDemo.p  LowHighCharTest.p  MDArray_Suite.p  Makefile  MathLibTest.p  MathSuite01.p  Nested  NestedRoutine_Suite.p  NestedVarArray.p  OpenArrayBaseTypeMismatch.p  OpenArrayParam.p  PointerTortureTest.p  ProgramFileList.p  RuntimeBuiltinRegistryTest.p  SDLRenderCopyTest.p  SuccEnumTest.p  TestFileOperations.p  TestSuite.p  TestSuite2.p  TestSuite3.p  TestSuite4.p  TestSuite5.p  TestSuite6.p  TestSuite7.p  TypeTestSuite  WeatherOfflineTest.p  WeatherSample.json  (+49 more)
Tools/: aether_collapse_oneliners.py  aether_corpus_gen.py  aether_doc_bench.py  aether_doc_bench_mechanisms.py  aether_specialization_build_dataset.py  aether_specialization_export_corpus.py  aether_specialization_export_reference_corpus.py  aether_specialization_import_candidates.py  aether_specialization_prepare_assets.py  aether_specialization_sync_to_spark.py  check_submodule_refs.sh  deploy_aether_to_claw2.sh  install_claw2_autodeploy.sh  lldb-pty-debug.lldb  lldb-pty-launch.lldb  qwen3_base_lora_sft.py  qwen3_base_server.py  run_aether_doc_bench_with_doc.py  run_qwen3_base_spark_benchmark.sh  spark_qwen3_base_remote.py  spark_qwen3_base_train_remote.py  sweep_corpus.sh
build.del/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pscal_install_root.txt
cmake/: ConfigureExampleFile.cmake
etc/: fstab  group  passwd  rc  termcap  words.many  words.short
extract-dryrun/: README.md
ios/: IOS_AUDIT_STATUS.md  PSCALIOS-LinkerWorkaround.xcconfig  README.md  build_curl_ios.sh  curl_securetransport.cmake  test_bundle.sh
lib/: CRT.pl  CRTold.pl  MathLib.pl  StringUtil.pl  TestCase.98359  TestCase.98360  TestCase.98361  TestCase.98362  TestCase.98363  base64.pl  calculatearea.pl  crt.pl  dos.pl  mathlib.pl
scope_verify/: run_all_scope_tests.py
src/: ast.c  ast.h  audio.c  audio.h  builtin.c  builtin.h  builtin_network_api.c  globals.c  globals.h  interpreter.c  interpreter.h  lexer.c  lexer.h  list.c  main.c  parser.c  parser.h  sdl.c  sdl.h  symbol.c  symbol.h  types.h  utils.c  utils.h
src/ext_builtins/: CMakeLists.txt  register.c  reversestring.c
src/ext_builtins/graphics/: register.c
src/ext_builtins/math/: CMakeLists.txt  chudnovsky.c  factorial.c  fibonacci.c  mandelbrot.c  register.c
src/ext_builtins/strings/: CMakeLists.txt  register.c  reversestring.c
src/ext_builtins/system/: CMakeLists.txt  fileexists.c  getpid.c  register.c  swap.c
src/ext_builtins/user/: README.md  balls3d.c  register.c  sierpinski_threads.c
tools/: aether_corpus_gen.py  aether_doc_bench.py  aether_doc_bench_combine.py  aether_doc_bench_mechanisms.py  aether_export_builtins_reference.py  aether_idea_dashboard.py  aether_idea_miner.py  aether_negative_tier.py  aether_specialization_build_dataset.py  aether_specialization_export_corpus.py  aether_specialization_export_reference_corpus.py  aether_specialization_prepare_assets.py  aether_specialization_sync_to_spark.py  aether_specialization_validate_corpus.py  aether_wild_eval.py  bench_openai_chat_command.py  bench_remote_http_command.py  bootstrap_host.sh  build_pscal_aarch64_rootfs.sh  clike  dpc  (+35 more)
tools/smallclue-standalone/: CMakeLists.txt
(+3242 files in other folders)
